添加漏洞接口
